[gd_scene load_steps=11 format=3 uid="uid://fkka2y3ruhr1"]

[ext_resource type="Script" path="res://block.gd" id="1_582mw"]
[ext_resource type="Texture2D" uid="uid://dcief01gwrudf" path="res://images/05_apple_pie.png" id="1_vch4q"]
[ext_resource type="Texture2D" uid="uid://nnckqmh3t8x0" path="res://images/square.png" id="3_kv143"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4ll6f"]

[sub_resource type="Animation" id="Animation_kga0q"]
resource_name = "go_down"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 30)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_kn15s"]
resource_name = "go_left"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-30, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_sd14j"]
resource_name = "go_right"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(30, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_02ysy"]
resource_name = "go_up"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -30)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_rlo4s"]
resource_name = "selected"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(2, 2), Vector2(2.5, 2.5), Vector2(2, 2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b5pix"]
_data = {
"go_down": SubResource("Animation_kga0q"),
"go_left": SubResource("Animation_kn15s"),
"go_right": SubResource("Animation_sd14j"),
"go_up": SubResource("Animation_02ysy"),
"selected": SubResource("Animation_rlo4s")
}

[node name="Block" type="Node2D"]
script = ExtResource("1_582mw")

[node name="sprite" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("1_vch4q")

[node name="area" type="Area2D" parent="."]
scale = Vector2(2, 2)

[node name="collision" type="CollisionShape2D" parent="area"]
shape = SubResource("RectangleShape2D_4ll6f")

[node name="selected" type="Sprite2D" parent="."]
texture = ExtResource("3_kv143")

[node name="animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_b5pix")
}

[connection signal="mouse_entered" from="area" to="." method="_on_area_mouse_entered"]
[connection signal="mouse_exited" from="area" to="." method="_on_area_mouse_exited"]
[connection signal="animation_finished" from="animation" to="." method="_on_animation_animation_finished"]
